<resources>
    <string name="app_name">Occcccccccichat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="avatar">AVATAR</string>
    <string name="name">NAME</string>
    <string name="ochichat_id">OCHICHAT_ID</string>
    <string name="nickname">NICKNAME</string>
    <string name="chat">Chat</string>
    <string name="modify">Modify</string>
    <string name="default_name">Default_Name</string>
    <string name="default_nickname">Default_Nickname</string>
    <string name="id">ID</string>
    <string name="default_id">Default_ID</string>
    <string name="save">SAVE</string>
    <string name="content">CONTENT</string>

    <string-array name="head_images">
        <item>@drawable/head_icon_1</item>
        <item>@drawable/head_icon_2</item>
        <item>@drawable/head_icon_3</item>
        <item>@drawable/head_icon_4</item>
        <item>@drawable/head_icon_5</item>
        <item>@drawable/head_icon_6</item>
        <item>@drawable/head_icon_7</item>
        <item>@drawable/head_icon_8</item>
        <item>@drawable/head_icon_9</item>
        <item>@drawable/head_icon_10</item>
        <item>@drawable/head_icon_11</item>
        <item>@drawable/head_icon_12</item>
        <item>@drawable/head_icon_13</item>
        <item>@drawable/head_icon_14</item>
        <item>@drawable/head_icon_15</item>
        <item>@drawable/head_icon_16</item>
        <item>@drawable/head_icon_17</item>
        <item>@drawable/head_icon_18</item>
        <item>@drawable/head_icon_19</item>
        <item>@drawable/head_icon_20</item>
        <item>@drawable/head_icon_21</item>
        <item>@drawable/head_icon_22</item>
        <item>@drawable/head_icon_23</item>
        <item>@drawable/head_icon_24</item>
        <item>@drawable/head_icon_25</item>
        <item>@drawable/head_icon_26</item>
        <item>@drawable/head_icon_27</item>
        <item>@drawable/head_icon_28</item>
        <item>@drawable/head_icon_29</item>
        <item>@drawable/head_icon_30</item>
        <item>@drawable/head_icon_31</item>
        <item>@drawable/head_icon_32</item>
        <item>@drawable/head_icon_33</item>
        <item>@drawable/head_icon_34</item>
        <item>@drawable/head_icon_35</item>
        <item>@drawable/head_icon_36</item>
        <item>@drawable/head_icon_37</item>
        <item>@drawable/head_icon_38</item>
        <item>@drawable/head_icon_39</item>
        <item>@drawable/head_icon_40</item>
        <item>@drawable/head_icon_41</item>
        <item>@drawable/head_icon_42</item>
        <item>@drawable/head_icon_43</item>
        <item>@drawable/head_icon_44</item>
        <item>@drawable/head_icon_45</item>
        <item>@drawable/head_icon_46</item>
        <item>@drawable/head_icon_47</item>
        <item>@drawable/head_icon_48</item>
        <item>@drawable/head_icon_49</item>
        <item>@drawable/head_icon_50</item>
        <item>@drawable/head_icon_51</item>
        <item>@drawable/head_icon_52</item>
        <item>@drawable/head_icon_53</item>
        <item>@drawable/head_icon_54</item>
        <item>@drawable/head_icon_55</item>
        <item>@drawable/head_icon_56</item>
        <item>@drawable/head_icon_57</item>
        <item>@drawable/head_icon_58</item>
        <item>@drawable/head_icon_59</item>
        <item>@drawable/head_icon_60</item>
        <item>@drawable/head_icon_61</item>
        <item>@drawable/head_icon_62</item>
        <item>@drawable/head_icon_63</item>
        <item>@drawable/head_icon_64</item>
        <item>@drawable/head_icon_65</item>
        <item>@drawable/head_icon_66</item>
        <item>@drawable/head_icon_67</item>
        <item>@drawable/head_icon_68</item>
        <item>@drawable/head_icon_69</item>
        <item>@drawable/head_icon_70</item>
        <item>@drawable/icon_cricle</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">Login</string>
    <string name="passwd">passwd</string>
    <string name="signup">signup</string>
    <string name="password_repeat">Repeat</string>
    <string name="notice">注意</string>
    <string name="cancel">取消</string>
    <string name="go">GO</string>
    <string name="message">Message</string>
    <string name="time">time</string>
</resources>