<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contact.ContactEditActivity">

    <ImageView
        android:id="@+id/avatar_imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/name"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nickname_textView" />

    <TextView
        android:id="@+id/ochiChatId_textView"
        android:layout_width="350dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/ochichat_id"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_textView" />

    <Button
        android:id="@+id/chat_btn"
        android:layout_width="285dp"
        android:layout_height="77dp"
        android:text="@string/chat"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ochiChatId_textView" />

    <Button
        android:id="@+id/modify_btn"
        android:layout_width="164dp"
        android:layout_height="54dp"
        android:text="@string/modify"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat_btn" />

    <TextView
        android:id="@+id/nickname_textView"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:text="@string/nickname"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>