<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:viewBindingIgnore="true">

    <LinearLayout
        android:id="@+id/layout_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/item_msg_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/id"
            android:textSize="18sp"
            android:gravity="center"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/item_msg_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"

            android:text="@string/message"
            android:textSize="18sp"
            android:gravity="center"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/layout_msg"/>

    <TextView
        android:id="@+id/item_msg_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/time"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/layout_msg"/>



</androidx.constraintlayout.widget.ConstraintLayout>