<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.Occcccccccichat.FullscreenContainer"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/label_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/login"
        android:textSize="30sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="179dp" />

    <LinearLayout
        android:id="@+id/layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/label_login"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/label_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:text="@string/id"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"

            android:inputType="number"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layout_id"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/label_passwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:text="@string/passwd"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText_passwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"

            android:inputType="textPassword"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/layout_passwd"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="112dp">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:text="@string/signup" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>