<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SignupActivity">


    <LinearLayout
        android:id="@+id/layout_passwd_signup_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_passwd_signup">

        <TextView
            android:id="@+id/label_passwd_repeat"
            android:layout_width="0sp"
            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:text="@string/password_repeat"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText_passwd_signup_repeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"

            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_name_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/label_signup">

        <TextView
            android:id="@+id/label_name_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/name"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText_name_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"

            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:id="@+id/label_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:text="@string/signup"
        android:textSize="30sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_passwd_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/layout_name_signup">

        <TextView
            android:id="@+id/label_passwd_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/passwd"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText_passwd_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"

            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_signup_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        app:layout_constraintTop_toBottomOf="@id/layout_passwd_signup_repeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>